# dahan

./: .gitignore  .vacat  CMakeLists.txt  LICENSE  README  code_specify.adoc  command  make  modules  run  vrun
com/: string.c
eng/: datafile.c  eng.c
fs/: fs-init.c  sml-drive.c  vfs.c
include/: _limits.h  _names.h  dhext.h  dhlibc.h  dhmem.h  exit.h  files.h  gext_api.h  gio.h  glibc.h  gmemp.h  gtools.h  gutil.h  linked.h  types.h
include/cfs_cd/: diret.h  diret_tmp  printf_main.c
include/eng/: areabuf.h  block.h  datafile.h  eng.h
include/fs/: fat.h  fblock.h  fs-main.h  sml-drive.h  vfs.h
include/ifs/: ifs.h
include/inst-set/: inst-set.h
include/inst-set/exec/: README  inst-set-exec.h
include/kernel/: aat.h  bytebuf.h  column.h  database.h  kconfig.h  options.h  table.h
include/kernel/a/: kcheck.h
include/kernel/aux/: comm.h  kcheck.h
include/kernel/store/: stdstore.h
include/mdef/: _f_limits.h  _f_name.h  _g_conf.h
include/tools/: files.h  vstring.h  xstring.h
include/vap_cd/: des-cm.md  diret.h  vap-des-cm.md
include/vasm/: README.md  design.h  diret.h  vacat-asm-exp.md  vap-asm-exp.md  vasm.h
include/vasm/exec/: vacat_exec.h
inst-set/: diret.h  inst-set.c
inst-set/comp/: comp.c  compaux.h
inst-set/exec/: exec.c
kernel/: aat.c  bytebuf.c  column.c  column.cpp  database.c  kconfig.c  options.c  table.c  table.cpp  write_file.c
kernel/a/: kcheck.c
kernel/aux/: kcheck.c
kernel/buffer/: bytebuf.c
kernel/serialize/: _serial.h  deserialize.c  serialize.c
kernel/store/: kstore.c
main/: command-main.c  main.c  main.cpp
sha256/: sha256.c  sha256.h
tools/: files.c  linked.c  string.c
vap/: vap_parser.c
vasm/: design.c  diret.h  vasm.c
vasm-comp/: .vap  compaux.h  diret.h  vasm_comp.c  vasm_lex.c
vasm/comp/: vasm_comp.c
vasm/exec/: compaux.h  vasm_exec.c
wrap/: iowrap.c
